Alignment issues - tested on the examples and the docs.

--- a/src/scss/theme-interior/partials/_typography.scss
+++ b/src/scss/theme-interior/partials/_typography.scss
@@ -71,7 +71,7 @@ h2 {
 
 .standard-layout {
   h2 {
-    @include baseline($two-line-pica, $above: .9, $below: .4, $margin: 4.1);
+    @include baseline($two-line-pica, $above: 1, $below: .5, $margin: 4.1);
   }
   section > p,
   .section > p {
@@ -89,11 +89,11 @@ h3 {
 }
 
 h4 {
-  @include baseline($double-pica, $line-height: 1.15, $above: 1.1, $below: .5);
+  @include baseline($double-pica, $line-height: 1.15, $above: 1, $below: .5);
 }
 
 h5 {
-  @include baseline($great-primer, $line-height: 1.35, $above: 1.2, $below: .5);
+  @include baseline($great-primer, $line-height: 1.35, $above: 1.1, $below: .5);
 }
 
 .docs {
